--- a/08.03.2017-web/deneme.html
+++ b/08.03.2017-web/deneme.html
@@ -4,7 +4,7 @@
 
 <html>
 	<head>	
-		<title> Ornek HTML Sayfası </title> <!- sayfa bilgileri ->
+		<title> Ornek HTML Sayfası </title> <!-- sayfa bilgileri -->
 		<link href ="style.css" type="text/css"
 			rel="stylesheet" />
 	</head>
