--- a/01.03.2017-web/deneme.html
+++ b/01.03.2017-web/deneme.html
@@ -4,15 +4,15 @@
 
 <html>
 	<head>	
-		<title> Sayfa Bilgisi </title> <!- sayfa bilgileri ->
+		<title> Sayfa Bilgisi </title> <!-- sayfa bilgileri -->
 	</head>
 	
 	<body>
-		<P> ALİ OKULA GİTTİ </P> <! Paragraf ->
+		<P> ALİ OKULA GİTTİ </P> <!-- Paragraf -->
 		<h1>EN BÜYÜK PUNTO </h1>
 		<p> BUDA EN KÜÇÜK PUNTO </h6>
 		<p> Başlangıç </p>
-		<hr />  <!- yatay çizgi ->
+		<hr />  <!-- yatay çizgi -->
 		<p> Bitiş </p>
 		<p><a href="https://github.com/61baydin">61baydin </a></p>
 		<p><p><img src="https://avatars3.githubusercontent.com/u/16050941?v=3&s=460" 					title="Burak Aydın" />
