--- a/01.03.2017-web/deneme.html
+++ b/01.03.2017-web/deneme.html
@@ -10,7 +10,7 @@
 	<body>
 		<P> ALİ OKULA GİTTİ </P> <!-- Paragraf -->
 		<h1>EN BÜYÜK PUNTO </h1>
-		<p> BUDA EN KÜÇÜK PUNTO </h6>
+		<h6> BUDA EN KÜÇÜK PUNTO </h6>
 		<p> Başlangıç </p>
 		<hr />  <!-- yatay çizgi -->
 		<p> Bitiş </p>
